# ooregex

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: tutorial.md
src/ooregex/: __init__.py  ooregex.py
src/regex_gen/: __init__.py  regex_gen.py
tests/: test_combined.py  test_simple.py
