[tool.poetry]
name = "regex-gen"
version = "0.1.0"
description = "A simple, object-oriented, regular expression generator."
authors = ["Titanium Brain <titaniumbrain@vivaldi.net>"]
readme = "README.md"
packages = [{include = "regex_gen", from = "src"}]
homepage = "https://github.com/TitaniumBrain/regex_gen"
documentation = "https://github.com/TitaniumBrain/regex_gen/docs/"
keywords = ["regex", "object oriented"]


[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
