[tool.poetry]
authors = ["Titanium Brain <titaniumbrain@vivaldi.net>"]
description = "A simple, object-oriented, regular expression generator."
documentation = "https://github.com/TitaniumBrain/ooregex/docs/"
homepage = "https://github.com/TitaniumBrain/ooregex"
keywords = ["regex", "object oriented"]
name = "ooregex"
packages = [{include = "ooregex", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
